tests/errors/surf_name_06.experr
name 'wrod' is not defined
